@@ -126,6 +126,7 @@ typedef enum event_identifier
   EVENT_SET_KERNEL_POWER_FINAL    = 0x000000c0,
   EVENT_WEAK_HASH_POST            = 0x000000d0,
   EVENT_WEAK_HASH_PRE             = 0x000000d1,
+  EVENT_WEAK_HASH_ALL_CRACKED     = 0x000000d2,
   EVENT_WORDLIST_CACHE_GENERATE   = 0x000000e0,
   EVENT_WORDLIST_CACHE_HIT        = 0x000000e1,
 
