@@ -36,6 +36,7 @@
 
 - Building: Added hashcat32.dll and hashcat64.dll makefile targets for building hashcat windows libraries
 - Building: Removed access to readlink() on FreeBSD
+- Events: Added new event EVENT_WEAK_HASH_ALL_CRACKED if all hashes have been cracked during weak hash check
 - Hardware management: Switched matching ADL device with OpenCL device by using PCI bus, device and function
 - Hardware management: Switched matching NvAPI device with OpenCL device by using PCI bus, device and function
 - Hardware management: Switched matching NVML device with OpenCL device by using PCI bus, device and function
